--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_dotenv: ^5.1.0
+  font_awesome_flutter: ^10.6.0
+  gap: ^3.0.1
   get_it: ^7.6.4
+  google_fonts: ^6.1.0
   injectable: ^2.3.2
   very_good_analysis: ^5.1.0
 
