--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,10 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   gap: ^3.0.1
   get_it: ^7.6.4
+  go_router: ^12.1.1
   google_fonts: ^6.1.0
   injectable: ^2.3.2
+  redacted: ^1.0.11
   very_good_analysis: ^5.1.0
 
 dev_dependencies:
@@ -43,6 +45,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
