--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   ably_flutter: ^1.2.22
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   firebase_auth: ^4.13.0
   firebase_core: ^2.22.0
   flutter:
@@ -24,6 +25,7 @@ dependencies:
   get_it: ^7.6.4
   go_router: ^12.1.1
   google_fonts: ^6.1.0
+  google_sign_in: ^6.1.6
   injectable: ^2.3.2
   redacted: ^1.0.11
   very_good_analysis: ^5.1.0
