--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_fonts: ^6.1.0
   google_sign_in: ^6.1.6
   injectable: ^2.3.2
+  intl: ^0.18.1
+  percent_indicator: ^4.2.3
   redacted: ^1.0.11
   toastification: ^1.1.0
   very_good_analysis: ^5.1.0
